syntax = "proto3";
option go_package = "hello/hello";

service MyService {
    rpc MyFunction(MyNumber) returns (MyNumber) {}
}

message MyNumber {
    int32 value = 1;
}