syntax = "proto3";

option go_package = "serverstreaming/serverstreaming";

service ServerStreaming {
  // A Client streaming RPC.
   rpc GetServerResponse(Number) returns (stream Message) {}
}

message Message {
  string message = 1;
}

message Number {
  int32 value = 1;
}